# OFDM_SDR

./: .gitignore  flowgraph.grc  flowgraph.py  flowgraph_epy_block_0.py  spectrum_analyzer.grc  spectrum_analyzer.py  test.ipynb  tx.ipynb
data/: some_text.txt
gr-OFDM_OOT/: CMakeLists.txt  MANIFEST.md
gr-OFDM_OOT/apps/: CMakeLists.txt
gr-OFDM_OOT/docs/: CMakeLists.txt  README.OFDM_OOT
gr-OFDM_OOT/grc/: CMakeLists.txt  OFDM_OOT_BER_bbb.block.yml  OFDM_OOT_autocorr_cc.block.yml  OFDM_OOT_autocorr_cpp_cc.block.yml  OFDM_OOT_autocorr_cpp_cccc.block.yml  OFDM_OOT_cfar_detector.block.yml  OFDM_OOT_cfar_detector_cpp.block.yml  OFDM_OOT_cfar_detector_cpp_ccc.block.yml  OFDM_OOT_channel_est.block.yml  OFDM_OOT_channel_est_hr.block.yml  OFDM_OOT_ofdm_corr_sync_cc.block.yml  OFDM_OOT_ofdm_corr_sync_cpp_cc.block.yml  OFDM_OOT_ofdm_corr_sync_demultiplex.block.yml  OFDM_OOT_ofdm_corr_sync_demultiplex_cc.block.yml  (+15 more)
gr-OFDM_OOT/python/OFDM_OOT/bindings/: CMakeLists.txt  autocorr_cpp_cc_python.cc  autocorr_cpp_cccc_python.cc  cfar_detector_cpp_ccc_python.cc  cfar_detector_cpp_python.cc  ofdm_corr_sync_cpp_cc_python.cc  ofdm_modulator_cpp_cc_python.cc  python_bindings.cc
gr-OFDM_OOT/python/OFDM_OOT/bindings/docstrings/: autocorr_cpp_cc_pydoc_template.h  autocorr_cpp_cccc_pydoc_template.h  cfar_detector_cpp_ccc_pydoc_template.h  cfar_detector_cpp_pydoc_template.h  ofdm_corr_sync_cpp_cc_pydoc_template.h  ofdm_modulator_cpp_cc_pydoc_template.h
rx_tx_records/: tx_data
tmp/: autocorr_cpp_cccc_impl.cc  autocorr_cpp_cccc_impl.h  cfar_detector_cpp_ccc_impl.cc  cfar_detector_cpp_ccc_impl.h
(+69 files in other folders)
